fix menu bar gap inn small screen

--- a/style.css
+++ b/style.css
@@ -265,7 +265,7 @@ header {
 
     nav .menu {
         flex-wrap: wrap;
-        gap: 10px;
+        gap: 13px;
         padding: 0;
     }
 
